<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.UserActivity"
    android:background="#000000">

    <include layout="@layout/toolbar" />


    <TextView
        android:id="@+id/benvenuto2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:layout_marginBottom="28dp"
        android:text="Accesso su NaTour"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/ivPersonFoto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/ivPhotoUser"
        android:layout_width="106dp"
        android:layout_height="122dp"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toTopOf="@+id/tvUsernameUA"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="ContentDescription,ImageContrastCheck"
        android:src="@drawable/ic_baseline_account_circle_2411111"
        tools:srcCompat="@drawable/ic_baseline_account_circle_2411111" />

    <EditText
        android:id="@+id/tvUsernameUA"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="252dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:minHeight="48dp"
        android:text="@string/nome_utenteUA"
        android:textColor="#FAFAFA"
        android:focusable="false"
        android:clickable="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints=""
        tools:ignore="LabelFor,TextFields" />

    <EditText
        android:id="@+id/tvNameUA"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:minHeight="48dp"
        android:text="@string/nomeUA"
        android:textColor="#FAFAFA"
        android:focusable="false"
        android:clickable="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvUsernameUA"
        android:autofillHints=""
        tools:ignore="LabelFor,TextFields" />

    <EditText
        android:id="@+id/tvSurnameUA"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:minHeight="48dp"
        android:text="@string/cognomeUA"
        android:textColor="#FAFAFA"
        android:focusable="false"
        android:clickable="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvNameUA"
        android:autofillHints=""
        tools:ignore="LabelFor,TextFields" />

    <EditText
        android:id="@+id/tvEmailUA"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:minHeight="48dp"
        android:text="@string/emailUA"
        android:textColor="#FAFAFA"
        android:focusable="false"
        android:clickable="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvSurnameUA"
        android:autofillHints=""/>

    <Button
        android:id="@+id/btnSignout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="96dp"
        android:drawableLeft="@drawable/ic_baseline_exit_to_app_24"
        android:ems="10"
        android:text="@string/signoutbtn"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:focusable="false"
        android:clickable="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="RtlHardcoded" />

</androidx.constraintlayout.widget.ConstraintLayout>